--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,8 +33,14 @@
 }
 
 .Header__search {
-  margin-left: 20px;
+  margin-left: 10px;
   color: var(--gray);
+}
+
+@media (min-width: 576px) {
+  .Header__search {
+    margin-left: 20px;
+  }
 }
 
 .Header__right {
@@ -48,7 +54,6 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 0.7rem;
   text-align: right;
-  display: none;
 }
 
 @media (min-width: 576px) {
@@ -63,13 +68,18 @@
   text-transform: uppercase;
   font-size: 0.7rem;
   letter-spacing: 2px;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   text-decoration: none;
   padding: 0.5rem 1rem;
   border-radius: 4px;
   border: 1px solid var(--gray);
   color: var(--gray);
   transition: all 0.2s ease-in;
+}
+@media (min-width: 576px) {
+  .Header__button {
+    margin-left: 1rem;
+  }
 }
 
 .Header__button:hover {
