--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -12,7 +12,7 @@
 }
 
 .Posts__no-posts {
-  margin-top: calc(50vh - 150px);
+  margin-top: 20vh;
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
