--- a/src/components/Views/Login/Login.css
+++ b/src/components/Views/Login/Login.css
@@ -9,6 +9,8 @@
   align-items: center;
   background: var(--white);
   z-index: 2222;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .Login__body {
@@ -19,13 +21,17 @@
 }
 
 .Login__logo {
-  width: 50%;
+  width: 30%;
+}
+
+.Login__title {
   margin-bottom: 20px;
+  font-weight: normal;
+  font-size: 1rem;
 }
 
 .Login__button {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-top: 20px;
   text-transform: uppercase;
   font-size: 0.8rem;
   letter-spacing: 2px;
