--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -12,16 +12,18 @@
   background: var(--white);
 }
 
-.Error__code {
+.Error__code.container {
   text-align: center;
   font-size: 2rem;
   font-weight: bolder;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 10px;
 }
 
-.Error__message {
-  margin-bottom: 20px;
+.Error__message.container {
+  margin-bottom: 40px;
+  text-align: center;
 }
 
 .Error__button {
