--- a/src/components/FullPost/FullPost.css
+++ b/src/components/FullPost/FullPost.css
@@ -62,7 +62,6 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 10px;
 }
-
 .FullPost__date {
   color: var(--gray);
   font-size: 0.7rem;
@@ -90,18 +89,21 @@
 }
 
 .FullPost__options {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  border: 1px soild black;
-  right: 10px;
-  bottom: 5px;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
   margin-left: auto;
-  display: flex;
-  justify-content: space-between;
   cursor: pointer;
   transform: scale(1);
   transition: all 75ms ease;
+}
+
+@media (min-width: 576px) {
+  .FullPost__options {
+    width: 20px;
+    height: 20px;
+    margin-left: auto;
+  }
 }
 
 .FullPost__options:hover {
@@ -109,17 +111,24 @@
 }
 
 .FullPost__buttons {
-  margin: 5px 0 10px;
+  margin: 5px 0 5px;
   text-align: center;
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   transform: rotateX(180deg) scale(0);
   height: 0;
   opacity: 0;
   transition: all 300ms ease;
 }
+
+@media (min-width: 576px) {
+  .FullPost__buttons {
+    justify-content: flex-end;
+  }
+}
+
 .FullPost__buttons--show {
   transform: rotateX(360deg) scale(1);
   height: auto;
@@ -127,7 +136,7 @@
 }
 
 .FullPost__button {
-  width: 120px;
+  flex: 1;
   margin: 5px;
   padding: 10px;
   border: 2px solid var(--light-gray);
@@ -139,6 +148,13 @@
   letter-spacing: 2px;
   cursor: pointer;
   transition: all 200ms ease;
+}
+
+@media (min-width: 576px) {
+  .FullPost__button {
+    flex: none;
+    width: 120px;
+  }
 }
 
 .FullPost__button:hover {
